--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <version>0.1.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
